--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -3,14 +3,15 @@
 * {
     box-sizing: border-box;
 }
-html,body
-{
+
+html,body{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
 }
+
 body{
 	background-color: black;
 	margin: 0;	
@@ -34,7 +35,7 @@ li a{
 }
 
 p{
-	font-size: 27px;
+	font-size: 17px;
     line-height: 1.5;
 }
 
@@ -104,6 +105,7 @@ td h1{
 	display: block;
 	margin: auto;
     color: yellow;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks1{
@@ -112,14 +114,16 @@ td h1{
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks2{
-	background-color: #444d5b;
+	background-color: black;
 	color: yellow;
 	padding: 0% 5% 20% 5%;
 	display: block;
 	margin: 0;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks3{
@@ -128,10 +132,11 @@ td h1{
     padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
+	border-bottom: 10px solid yellow;	
 }
 
 .tekstboks4{
-	background-color: #444d5b;
+	background-color: black;
 	color: yellow;
 	padding: 20% 5% 20% 5%;
 	display: block;
@@ -437,6 +442,7 @@ li{
 	padding: 10% 5% 15% 5%;
 	display: block;
 	margin: auto;   
+	border-bottom: 10px solid yellow;
 }
 
 .lastNed{
@@ -450,14 +456,16 @@ li{
 	display: block;
 	margin: 0;
 	font-size: 15px;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks2{
-	background-color: #444d5b;
+	background-color: black;
 	color: yellow;
 	padding: 10% 5% 15% 5%;
 	display: block;
 	margin: 0;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks3{
@@ -466,10 +474,11 @@ li{
 	padding: 10% 5% 15% 5%;
 	display: block;
 	margin: 0;
+	border-bottom: 10px solid yellow;
 }
 
 .tekstboks4{
-	background-color: #444d5b;
+	background-color: black;
 	color: yellow;
 	padding: 10% 5% 15% 5%;
 	display: block;
@@ -511,7 +520,7 @@ li{
     text-align: center;
     padding: 15px 15px;
     font-size: 30px;
-    color: white;
+    color: yellow;
 }
 
 .footer{
