om oss mekk på alle sider

--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -228,10 +228,20 @@ td h1{
 
 #skriftS6{
     font-size: 17px;
+    text-align: center;
 }
 
 #skriftS7{
     font-size: 17px;
+    text-align: center;
+}
+#skriftS8{
+    font-size: 17px;
+    text-align: center;
+}
+#skriftS9{
+    font-size: 17px;
+    text-align: center;
 }
 
 #problemstilling{
