--- a/stylesheet.css
+++ b/stylesheet.css
@@ -222,10 +222,20 @@ td h1{
 
 #skriftS6{
     font-size: 17px;
+    text-align: center;
 }
 
 #skriftS7{
     font-size: 17px;
+    text-align: center;
+}
+#skriftS8{
+    font-size: 17px;
+    text-align: center;
+}
+#skriftS9{
+    font-size: 17px;
+    text-align: center;
 }
 
 #problemstilling{
