--- a/stylesheet.css
+++ b/stylesheet.css
@@ -275,7 +275,7 @@ td h1{
 	margin: 0;
 	background-color: black;
 }
-#portrettBilder{
+.portrettBilder{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -514,7 +514,7 @@ li{
     margin-right: auto;
     margin-left: auto;
 }
-#portrettBilder{
+.portrettBilder{
     margin-left: auto;
     margin-right: auto;
 
