--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -281,7 +281,7 @@ td h1{
 	margin: 0;
 	background-color: black;
 }
-#portrettBilder{
+.portrettBilder{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -523,7 +523,7 @@ li{
     margin-right: auto;
     margin-left: auto;
 }
-#portrettBilder{
+.portrettBilder{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
